Bug 101471 - Non-visible menu bar in Ubuntu 16.04 after upgrade to 5.2.0.4
Summary: Non-visible menu bar in Ubuntu 16.04 after upgrade to 5.2.0.4
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All Linux (All)
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.3.0 target:5.2.2
Keywords:
: 101529 102236 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-13 07:39 UTC by Robert Orzanna
Modified: 2024-03-05 05:58 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
GIF animation showing two menus (486.11 KB, image/gif)
2016-08-14 11:48 UTC, Robert Orzanna
Details
libreoffice-gtk3 and radiance theme (25.03 KB, image/png)
2016-08-21 21:29 UTC, makilakixki
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Orzanna 2016-08-13 07:39:00 UTC
Dear all, 

Referring to a recent conversation at OMG Ubuntu [1], several users (me included) experience a non-visible menu bar in Ubuntu 16.04 after the recent upgrade to version 5.2.0.4. This graphical bug is shown in [2].

Has this bug already been noted and is there a solution to solve the glitch and correctly display the menu bar?

Thankfully,

~Robert


[1] http://disq.us/p/1atzgnw
[2] https://a.disquscdn.com/uploads/mediaembed/images/4079/7857/original.jpg?w=800&h
Comment 1 Jean-Baptiste Faure 2016-08-13 07:59:29 UTC
Not reproducible for me under Unity and Radiance theme with Version: 5.2.0.4
Build ID: 1:5.2.0~rc4-0ubuntu1~xenial2
Threads CPU : 4; Version de l'OS :Linux 4.4; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8)

What is your Ubuntu theme?
Do you use Unity or another desktop manager?

Best regards. JBF
Comment 2 Robert Orzanna 2016-08-13 08:16:22 UTC
Dear Jean-Baptiste,

I am using Ubuntu 16.04 with the Unity desktop. 

I don't think I have ever changed any of the default theme settings. 

The command:

gsettings get org.gnome.desktop.interface gtk-theme

returns "Ambiance" and not "Radiance".

What is Ubuntu 16.04's default theme?

Thankfully,

~Robert
Comment 3 Cor Nouws 2016-08-13 09:40:02 UTC
Hi Robert,

Looks more as a displacement then a missing tool bar?
Comment 4 Robert Orzanna 2016-08-13 09:47:12 UTC
Dear Cor, 

The menu bar is definitely there [1].

~Robert

[1] https://i.imgur.com/iUQuuhF.png
Comment 5 Jean-Baptiste Faure 2016-08-13 12:57:08 UTC
(In reply to Robert Orzanna from comment #2)
> [...]
> What is Ubuntu 16.04's default theme?

Ambiance.
Thank you for your answer.

Please, could you try with a clean new user profile?
https://wiki.documentfoundation.org/UserProfile

Best regards. JBF
Comment 6 Robert Orzanna 2016-08-13 16:49:52 UTC
Dear JBF,

The same problem occurs with a blank (new) profile.

Warmly,

~Robert
Comment 7 Robert Orzanna 2016-08-14 09:13:11 UTC
Can it be a problem related to the libreoffice-gtk* packages?

~Robert
Comment 8 Robert Orzanna 2016-08-14 11:48:11 UTC
Created attachment 126827 [details]
GIF animation showing two menus

I am just noticing that there are two menus being displayed under Unity.

Shouldn't this ideally just be the top one integrated into the Unity top bar?

Please have a look at my attached GIF.

Warmly,

~Robert
Comment 9 Cor Nouws 2016-08-14 19:37:43 UTC
Hi Robert,

I don't have the recent version integrated in Unity, so can't see the effect.

Can you check if there is a difference with the OS setting Appearance > Behavior.. menu's for a window / visibility menu's ?
Comment 10 Amr Ibrahim 2016-08-14 20:01:57 UTC
I am also affected by this bug. I use Ubuntu 14.04.5 with Unity (with Xenial HWE stack).

I found a workaround to make the invisible menu bar disappear. Start LO first from the Start Centre then open the required document.

If you start LO from a document, opening a second document also makes the invisible menu bar disappear.
Comment 11 Gérald Maruccia 2016-08-15 00:11:22 UTC
I am also affected by this bug. I use Ubuntu 14.04.5 with Unity (with Xenial HWE stack). I've updated LO through PPA « fresh » http://ppa.launchpad.net/libreoffice/ppa/ubuntu
http://img4.hostingpics.net/pics/803659Capturedu20160815012827.png

And I confirm Amr Ibrahim's workaround gets back menus in their expected place.

Whilst menus in LibreOffice Start Center are also broken…
Comment 12 Jean-Baptiste Faure 2016-08-15 05:50:46 UTC
Hi all affected by this issue:

- did you install the libreoffice-gtk* packages?
- what happens if you launch LibreOffice from the terminal by entering the following command (assuming libreoffice-gtk* package have been installed) : 
SAL_USE_VCLPUGIN="gtk" && libreoffice
or
SAL_USE_VCLPUGIN="gtk3" && libreoffice

Best regards. JBF
Comment 13 Amr Ibrahim 2016-08-15 06:52:50 UTC
I have all libreoffice-gtk* packages installed.
------------------------------------------------

Here is the terminal output:

:~$ SAL_USE_VCLPUGIN="gtk" && libreoffice

** (process:8937): WARNING **: require a newer gtk than 3.10 for theme expectations
------------------------------------------------

:~$ SAL_USE_VCLPUGIN="gtk3" && libreoffice

** (process:9020): WARNING **: require a newer gtk than 3.10 for theme expectations
Comment 14 Robert Orzanna 2016-08-15 10:58:26 UTC
I have the following libreoffice-gtk packages installed but the menu bar is still not properly visible:

orschiro@x230:~$ dpkg -l | grep libreoffice-gtk # grep deb package
ii  libreoffice-gtk                                      1:5.2.0~rc4-0ubuntu1~xenial2                                all          transitional package for the GTK+ 2 integration
ii  libreoffice-gtk2                                     1:5.2.0~rc4-0ubuntu1~xenial2                                amd64        office productivity suite -- GTK+ 2 integration
rc  libreoffice-gtk3                                     1:5.2.0~rc4-0ubuntu1~xenial2                                amd64        office productivity suite -- GTK+ 3 integration

orschiro@x230:~$ SAL_USE_VCLPUGIN="gtk" && libreoffice --writer
W: Unknown node under /registry/extlang: deprecated
W: Unknown node under /registry/grandfathered: comments
W: Unknown node under /registry/grandfathered: comments

orschiro@x230:~$ SAL_USE_VCLPUGIN="gtk3" && libreoffice --writer
W: Unknown node under /registry/extlang: deprecated
W: Unknown node under /registry/grandfathered: comments
W: Unknown node under /registry/grandfathered: comments
Comment 15 Sandor 2016-08-16 03:08:39 UTC
*** Bug 101529 has been marked as a duplicate of this bug. ***
Comment 16 GAJ 2016-08-17 22:26:06 UTC
(In reply to Amr Ibrahim from comment #13)
> I have all libreoffice-gtk* packages installed.
> ------------------------------------------------
> 
> Here is the terminal output:
> 
> :~$ SAL_USE_VCLPUGIN="gtk" && libreoffice
> 
> ** (process:8937): WARNING **: require a newer gtk than 3.10 for theme
> expectations
> ------------------------------------------------
> 
> :~$ SAL_USE_VCLPUGIN="gtk3" && libreoffice
> 
> ** (process:9020): WARNING **: require a newer gtk than 3.10 for theme
> expectations


I am also affected by this bug. I use Ubuntu 14.04.5 (32-bit) with Unity (with Xenial HWE stack).

My terminal output shows exactly the same message as Amr Ibrahim (only the process ID is different).

Also, opening a (writer) document directly from my file explorer shows the invisible extra menu-bar, but when opening a new document from within LO (with LO already running, that is), the newly opened document does not show the additional menu-bar and is integrated with Unity as expected. Moreover, opening a writer-document from my file explorer shows the extra menu-bar, but closing this file (but keepin LO running) and reopening the same file from within LO, results in correct Unity integration (no extra menu-bar).
Comment 17 makilakixki 2016-08-21 16:36:49 UTC
ghost menu bar gone after installing libreoffice-gtk3
Comment 18 Robert Orzanna 2016-08-21 16:49:04 UTC
Dear makilakixki,

You don't see the following black behaviour of the interface [1]?

Warmly,

-Robert

[1] http://i.imgur.com/iFFNWmX.png
Comment 19 Sandor 2016-08-21 21:21:56 UTC
Hi I have reported a duplicate of this bug before. Here is some points from that.
When I upgraded: lo-gtk2 was removed automatically by intelligent updater. (I am guessing as no more dependency of that package. Probably lo-gtk3 takes over. - ???) However the theme has set back to a (Windows 3.1) style without any theme. After Google search I re-installed lo-gtk2 and ghost menu appeared. Previously (before update) I have installed this lo-gtk3 but it has changed everything to black as Robert says. I am guessing this would be for Ubuntu theme integration and is the intended behaviour. However since it is not usable with sifr icon theme (and it seems neither with breeze) I have removed lo-gtk3. And I left with the bug. 
I personally believe gtk3 would be the solution to get rid of the ghost menubar,  but in that case we need icon theme that works with it. Probably the opposite of sifr icons if someone would make that. 
Hope that helps somewhat.
Comment 20 makilakixki 2016-08-21 21:29:12 UTC
Created attachment 126947 [details]
libreoffice-gtk3 and radiance theme
Comment 21 makilakixki 2016-08-21 21:31:14 UTC
libreoffice-gtk3 installation solves the ghost menu issue but creates a black toolbar issue as shown in the picture you uploaded. This black toolbar issue is only present as long as ambiance theme is used. As can be seen in the picture attached radiance theme looks ok.
Comment 22 Sandor 2016-08-21 21:47:24 UTC
I can confirm lo-gtk3 solves the problem with radiance.
My only problem is: I don't particularly like radiance bar on top.
However I think it is great work-around.
Comment 23 Marcelo Fernandez 2016-08-24 18:41:55 UTC
Sorry to add another "me too" to the thread, but, what kind of info is needed to diagnose the bug atm?

Regards
Comment 25 Robert Orzanna 2016-08-31 06:37:26 UTC
Thank you so much, Maxim! :-)

Warmly,

-Robert
Comment 26 Jean-Baptiste Faure 2016-09-01 04:06:51 UTC
(In reply to Maxim Monastirsky from comment #24)
> Should be fixed with
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=72eb18e520ea8165a6a20958a1551f55e5e14cab

Thank you very much Maxim!
Indeed it fixes the bug in master. Do you plan to backport this fix to 5.2 branch ?

Note: my comment #1 was wrong due to misunderstanding of the bug description. I reproduce the problem with LO 5.2 with GTK2 vclplugin.

Best regards. JBF
Comment 27 Commit Notification 2016-09-06 07:32:34 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc57ca9d6dc107fd0dcdfcb844ca8b937624281e&h=libreoffice-5-2

tdf#101471 Unity: make sure vcl menu is hidden

It will be available in 5.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Jean-Baptiste Faure 2016-09-17 17:24:46 UTC
*** Bug 102236 has been marked as a duplicate of this bug. ***