tdf#101471 Unity: make sure vcl menu is hidden

MenuBar::SetDisplayable happens to be called before
GtkSalMenu::EnableUnity(true) under gtk2, which leaves the vcl
menu visible (but not painted completely). Solve this by calling
SetDisplayable from inside EnableUnity, as it was before
800704e0c46f6f86f6a18a477ba4b6f313c5693a.

Note that calling SetDisplayable has a side effect of disabling
of menubar keyboard events, but we don't care about that,
because Unity menu is outside the application anyway.

Change-Id: I3948d5b57b1df480cee4fb962a5dc6b63a849b15
Reviewed-on: https://gerrit.libreoffice.org/28676
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit bc57ca9d6dc107fd0dcdfcb844ca8b937624281e)